--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "date-fns": "^2.29.3",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
